added MainGUI