@@ -1,3 +1,3 @@
 java -jar lib/antlr-4.9-complete.jar -package parser -o parser CUSTOM.g4
-javac -cp ".;lib/antlr-4.9-complete.jar" *.java
-java -cp ".;lib/antlr-4.9-complete.jar" Main
+javac --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls -cp ";lib/richtextfx-fat-0.10.5.jar;lib/antlr-4.9-complete.jar"  *.java
+java --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls -cp ";lib/richtextfx-fat-0.10.5.jar;lib/antlr-4.9-complete.jar" Main
